force-app/main/default/objects/Heuristic_Duplicate_Scan__c/Heuristic_Duplicate_Scan__c.object-meta.xml
<CustomObject>
  <label>Heuristic Duplicate Scan</label>
  <nameField>
    <displayFormat>HDS-{000000}</displayFormat>
    <label>Scan Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Heuristic Duplicate Scans</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>