force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Candidate_Pairs__c.field-meta.xml
<CustomField>
  <fullName>Candidate_Pairs__c</fullName>
  <label>Candidate Pairs</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>