force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Clear_Previous_Flags__c.field-meta.xml
<CustomField>
  <fullName>Clear_Previous_Flags__c</fullName>
  <defaultValue>true</defaultValue>
  <label>Clear Previous Flags</label>
  <type>Checkbox</type>
</CustomField>