force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Completed_At__c.field-meta.xml
<CustomField>
  <fullName>Completed_At__c</fullName>
  <label>Completed At</label>
  <type>DateTime</type>
</CustomField>