force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Flagged_Groups__c.field-meta.xml
<CustomField>
  <fullName>Flagged_Groups__c</fullName>
  <label>Flagged Groups</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>