force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Job_Id__c.field-meta.xml
<CustomField>
  <fullName>Job_Id__c</fullName>
  <label>Job Id</label>
  <length>40</length>
  <type>Text</type>
</CustomField>