force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Last_Heartbeat__c.field-meta.xml
<CustomField>
  <fullName>Last_Heartbeat__c</fullName>
  <label>Last Heartbeat</label>
  <type>DateTime</type>
</CustomField>