force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
  <fullName>Object_Api_Name__c</fullName>
  <label>Object API Name</label>
  <length>80</length>
  <type>Text</type>
</CustomField>