force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Object_Label__c.field-meta.xml
<CustomField>
  <fullName>Object_Label__c</fullName>
  <label>Object Label</label>
  <length>120</length>
  <type>Text</type>
</CustomField>