force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Processed_Accounts__c.field-meta.xml
<CustomField>
  <fullName>Processed_Accounts__c</fullName>
  <label>Processed Records</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>