force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Status</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>Queued</fullName>
        <default>true</default>
        <label>Queued</label>
      </value>
      <value>
        <fullName>Running</fullName>
      </value>
      <value>
        <fullName>Completed</fullName>
      </value>
      <value>
        <fullName>Failed</fullName>
      </value>
      <value>
        <fullName>Cancelled</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>