force-app/main/default/objects/Heuristic_Duplicate_Scan__c/fields/Threshold__c.field-meta.xml
<CustomField>
  <fullName>Threshold__c</fullName>
  <label>Threshold</label>
  <precision>3</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>